--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@
 DesignPatterns/DesignPatterns/bin
 DesignPatterns/DesignPatterns/obj
 DesignPatterns/DesignPatterns/packages
-DesignPatterns/.vs/DesignPatterns/v15
+DesignPatterns/.vs
